<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/full_name"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/email"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/etGender"
        android:entries="@array/array_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/username"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/date_of_birth"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etDateOfBirth"
        android:layout_width="match_parent"
        android:inputType="date"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/password"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/profile_picture"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:text="@string/add_picture"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bRegister"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>